force-app/main/default/objects/Notification__c/fields/Date_of_missing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_missing__c</fullName>
    <label>Date of missing</label>
    <type>Date</type>
</CustomField>