force-app/main/default/objects/Notification__c/fields/Description_of_the_animal__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_animal__c</fullName>
    <label>Description of the animal</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>