force-app/main/default/objects/Notification__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>