force-app/main/default/objects/Notification__c/fields/Place_of_missing__c.field-meta.xml
<CustomField>
    <fullName>Place_of_missing__c</fullName>
    <label>Place of missing</label>
    <length>200</length>
    <type>Text</type>
</CustomField>