force-app/main/default/objects/Notification__c/validationRules/Date_of_missing_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_missing_rule</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(NOW()) &lt;  Date_of_missing__c</errorConditionFormula>
    <errorDisplayField>Place_of_missing__c</errorDisplayField>
    <errorMessage>Date of missing cannot be greater than current date</errorMessage>
</ValidationRule>